# compsoc-calculator

./: .gitignore  README.md  flake.nix  package.nix  pyproject.toml
calculator/: main.py
